media/css/cresenity/cresenity.main.bs3.css
/* ... */
.switcher-switch {
    display: block;
    width: 18px;
    margin: 0;
    background: #FFFFFF;
    border: 2px solid #1AB394;
    border-radius: 3px;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 36px;
    -moz-transition: all 0.3s ease-in 0s;
    -webkit-transition: all 0.3s ease-in 0s;
    -o-transition: all 0.3s ease-in 0s;
    transition: all 0.3s ease-in 0s;
}

.switcher-inner:before, .switcher-inner:after {
    display: block;
    float: left;
    width: 50%;
    height: 16px;
    padding: 0;
    line-height: 16px;
    font-size: 10px;
    color: white;
    font-family: Trebuchet, Arial, sans-serif;
    font-weight: bold;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.switcher-inner:before {
    content: "ON";
    padding-left: 7px;
    background-color: #1AB394;
    color: #FFFFFF;
}

.switcher-inner:after {
    content: "OFF";
    padding-right: 7px;
    background-color: #FFFFFF;
    color: #919191;
    text-align: right;
}

.switcher-control:checked + .switcher-label .switcher-inner {
    margin-left: 0;
}

.switcher-control:checked + .switcher-label .switcher-switch {
    right: 0;
}

.navbar .brand {
    margin-left: 0px;
}

.modal {
    border-radius: 0;
}
.modal-body {
    background: #f8fafb;
}
.modal-header {
    height:auto;
}
.alert {
    border-radius: 0;
}

.label {
    border-radius: 0;
}

table.responsive {
    min-height: .01%;
    overflow-x: auto;
}
/* pace */
.pace {
    -webkit-pointer-events: none;
    pointer-events: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
}
.pace-inactive {
    display: none;
}
.pace .pace-progress {
    background: #1ab394;
    position: fixed;
    z-index: 2040;
    top: 0;
    right: 100%;
    width: 100%;
    height: 2px;
}
.pace-inactive {
    display: none;
}
.navbar-static-side, .nav-header, li.active, #page-wrapper, .footer {
    -webkit-transition: all 0.4s;
    -moz-transition: all 0.4s;
    -o-transition: all 0.4s;
    transition: all 0.4s;
}


.main {
    padding-bottom: 40px;
    border-bottom: 0;

}

.wrapper.wrapper-content {
    margin-top:15px;
}

#wrapper {
    width: 100%;
    overflow-x: hidden;
}
.navbar-static-side {
    -webkit-transition: all 0.4s;
    -moz-transition: all 0.4s;
    -o-transition: all 0.4s;
    transition: all 0.4s;
}

.navbar-static-side {
    z-index: 1020;
    position: absolute;
    width: 220px;
    border-color: #2f4050;
    background-color: #2f4050;
}

.navbar-static-side .mainnav {
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
    margin:0;
}
.navbar-static-side .mainnav > li {
    position: relative;
    display: block;
}
.navbar-static-side .mainnav > li.active {
    border-left: 4px solid #19aa8d;
    background: #293846;
}

.navbar-static-side .mainnav > li > a:hover, .navbar-static-side .mainnav .nav > li > a:focus {
    background-color: #293846;
    color: white;
}

.navbar-static-side .mainnav > li.active > a {
    color: #ffffff;
}

.navbar-static-side .mainnav > li > a {
    color: #a7b1c2;
    font-weight: 600;
    padding: 14px 20px 14px 25px;
    position: relative;
    display: block;
    /*    padding: 10px 15px; */
}

.navbar-static-side .mainnav > li > a i {
    margin-right: 6px;
}

.navbar-static-side .mainnav .caret {

    float: right;
    line-height: 1.42857;
    margin-top: 10px;
}

.navbar-static-side .mainnav > li > ul.dropdown-menu {
    position: absolute;
    left:100%;
    top:0;
}


.navbar-static-side ul.dropdown-menu {
    background:#2f4050;
    color:#a7b1c2;
    border-radius: 0;
    border:1px solid #293846;
    box-shadow:none;
    font-size:inherit;
    margin:0;
}

.navbar-static-side li:first-child > ul.dropdown-menu {

    margin-top:-5px;
}

.navbar-static-side ul.dropdown-menu > li > a {
    border-radius:0px;
    margin:4px 0px;

}
.navbar-static-side ul.dropdown-menu > li > a:hover, .navbar-static-side ul.dropdown-menu > li > a:focus, .navbar-static-side ul.dropdown-menu > li > a:active{
    background:#293846;
    color:#fff;
}

.navbar-static-side .dropdown-menu>.active>a, .navbar-static-side .dropdown-menu>.active>a:focus, .navbar-static-side .dropdown-menu>.active>a:hover {
    background:#293846;
    color:#fff;
}

.navbar-static-side .dropdown-submenu>a:after {
    margin-top: 8px;
}

.navbar-fixed-top, .navbar-static-top {
    background: #f3f3f4;
    position: relative;
    min-height: 50px;
    margin-bottom: 0;
    border: 1px solid transparent;
}

#page-wrapper {
    padding: 0 15px;
    min-height: 568px;
    position: relative !important;
    background-color: #f3f3f4;
}

#page-wrapper .minimalize-styl-2 {
    padding: 4px 12px;
    margin: 14px 5px 5px 20px;
    font-size: 14px;
    float: left;
}
.navbar .brand {

    padding: 15px 20px 12px;
    color: #999c9e;
}


.navbar-right {
    float: right!important;
    margin-right: 0px;
}

.navbar .nav.navbar-top-links > li > a {
    padding: 20px 10px;
    min-height: 50px;
}

.nav.navbar-right > li > a {
    color: #999c9e;
    text-shadow: none;
    font-size: 14px;
}

.nav.navbar-right > li > a:hover {
    color: #999c9e;
    text-shadow: none;
}


.page-heading {
    background-color: #ffffff;
    border-bottom: 1px solid #e7eaec;
    border-top: 0;
    padding: 0 10px 20px 10px;
}

.breadcrumb {
    background-color: #ffffff;
    padding: 0;
    margin-bottom: 0;

}

.breadcrumb > li a {
    color: inherit;
}


.footer {
    background: none repeat scroll 0 0 white;
    border-top: 1px solid #e7eaec;
    bottom: 0;
    left: 0;
    padding: 10px 20px;
    position: absolute;
    right: 0;
}


/* widget */
.widget-box {
    background: #fff;
    border: 0;
}
.widget-box .widget-title {
    background-color: #fff;
    background-image: none;
    border-color: #e7eaec;
    border-image: none;
    border-style: solid solid none;
    border-width: 2px 0 0;
    color: inherit;
    margin-bottom: 0;
    padding: 15px 15px 7px;
    min-height: 48px;
}
/* ... */

